--- a/PersonalPortfolio/src/styles.css
+++ b/PersonalPortfolio/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+*{
+  box-sizing: border-box;
+  font-family: 'Nunito Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+:root{
+  --links_navbar: #ffffff;
+}
+body{
+  background: rgb(255,60,172);
+  background: linear-gradient(225deg, rgba(255,60,172,1) 0%, rgba(120,75,160,1) 50%, rgba(43,134,197,1) 100%);
+  height: 100vh;
+}
