--- a/PersonalPortfolio/src/styles.css
+++ b/PersonalPortfolio/src/styles.css
@@ -8,9 +8,14 @@
 }
 :root{
   --links_navbar: #ffffff;
+  --links_icons: #000000;
 }
 body{
   background: rgb(255,60,172);
   background: linear-gradient(225deg, rgba(255,60,172,1) 0%, rgba(120,75,160,1) 50%, rgba(43,134,197,1) 100%);
   height: 100vh;
+}
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
 }
