--- a/PersonalPortfolio/src/app/components/footer/footer.component.html
+++ b/PersonalPortfolio/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="bottom-line">
   <div class="section_footer">
     <ul>
-      <li><a href="" class="social_links"><i class="fa-brands fa-facebook"></i></a></li>
-      <li><a href="" class="social_links"><i class="fa-brands fa-youtube"></i></a></li>
-      <li><a href="" class="social_links"><i class="fa-brands fa-github"></i></a></li>
+      <li><a href=""  target="_blank"class="social_links"><i class="fa-brands fa-facebook"></i></a></li>
+      <li><a href="" target="_blank" class="social_links"><i class="fa-brands fa-youtube"></i></a></li>
+      <li><a href="https://github.com/PykeMG" target="_blank" class="social_links"><i class="fa-brands fa-github"></i></a></li>
     </ul>
   </div>
 </div>
