--- a/PersonalPortfolio/src/app/components/navbar/navbar.component.html
+++ b/PersonalPortfolio/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="nav_navbar">
   <ul>
-    <li><a href="#" class="links_navbar">Cover</a></li>
-    <li><a href="#" class="links_navbar">About Me</a></li>
-    <li><a href="#" class="links_navbar">Education</a></li>
+    <li><a [routerLink]="['/cover']" class="links_navbar">Cover</a></li>
+    <li><a [routerLink]="['/about']" class="links_navbar">About Me</a></li>
+    <li><a [routerLink]="['/education']" class="links_navbar">Education</a></li>
     <li><a href="#" class="links_navbar">Work Experience</a></li>
     <li><a href="#" class="links_navbar">My Work</a></li>
   </ul>
