--- a/PersonalPortfolio/src/styles.css
+++ b/PersonalPortfolio/src/styles.css
@@ -11,11 +11,16 @@
   --links_icons: #000000;
 }
 body{
-  background: rgb(255,60,172);
-  background: linear-gradient(225deg, rgba(255,60,172,1) 0%, rgba(120,75,160,1) 50%, rgba(43,134,197,1) 100%);
+  background: rgb(21,104,158);
+  background: linear-gradient(18deg, rgba(21,104,158,1) 0%, rgba(0,0,0,1) 100%);
   height: 100vh;
 }
 .container{
-  max-width: 1200px;
+  width: 100%;
+  max-width: 1500px;
   margin: 0 auto;
+  padding: 0 50px;
+}
+section{
+  height: calc(100vh - 180px);
 }
