Addead all the components and the redirect links, also the new titles for any component into de project

--- a/PersonalPortfolio/src/styles.css
+++ b/PersonalPortfolio/src/styles.css
@@ -19,7 +19,7 @@ body{
   width: 100%;
   max-width: 1500px;
   margin: 0 auto;
-  padding: 0 50px;
+  padding: 0;
 }
 section{
   height: calc(100vh - 180px);
