--- a/PersonalPortfolio/src/app/components/footer/footer.component.html
+++ b/PersonalPortfolio/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <div class="bottom-line">
   <div class="section_footer">
     <ul>
-      <li><a href=""  target="_blank"class="social_links"><i class="fa-brands fa-facebook"></i></a></li>
-      <li><a href="" target="_blank" class="social_links"><i class="fa-brands fa-youtube"></i></a></li>
+      <li><a href="mailto:joseandree.j42@gmail.com"  target="_blank"class="social_links"><i class="fa-solid fa-envelope"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/jose-andree-sanchez-tenaud" target="_blank" class="social_links"><i class="fa-brands fa-linkedin"></i></a></li>
       <li><a href="https://github.com/PykeMG" target="_blank" class="social_links"><i class="fa-brands fa-github"></i></a></li>
     </ul>
   </div>
