--- a/PersonalPortfolio/src/app/components/education/education.component.html
+++ b/PersonalPortfolio/src/app/components/education/education.component.html
@@ -1,1 +1,24 @@
-<p>education works!</p>
+<section>
+  <div class="container about">
+    <div class="description">
+      <h1>Education</h1>
+      <div class="block_education">
+        <h2>ARCHITECTURE OF
+          TECHNOLOGY PLATFORMS AND SERVICES OF
+          INFORMATION</h2>
+          <p>ISIL | 2022</p>
+      </div>
+      <div class="block_education">
+        <h2>AS400 | genexus</h2>
+          <p>Software Enterprise Services | 2022</p>
+      </div>
+    </div>
+    <div class="photo">
+      <div class="parent">
+        <div class="div1"> <img src="../../../assets/img/FlQXoFaXoAQPZZ-.jpg" alt="" srcset=""> </div>
+        <div class="div2"><img src="../../../assets/img/isil-carreras.jpg" alt=""> </div>
+        <div class="div3"><img src="../../../assets/img/web-developer.jpg" alt=""> </div>
+        </div>
+    </div>
+  </div>
+</section>
