--- a/PersonalPortfolio/src/app/components/about/about.component.css
+++ b/PersonalPortfolio/src/app/components/about/about.component.css
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .about .photo{
   width: 50%;
