--- a/PersonalPortfolio/src/app/components/education/education.component.css
+++ b/PersonalPortfolio/src/app/components/education/education.component.css
@@ -6,7 +6,7 @@
   justify-content: space-around;
 }
 .about .photo{
-  width: 50%;
+  width: 30%;
   overflow: hidden;
 }
 .about .photo img{
@@ -21,8 +21,8 @@
   filter: grayscale(0);
 }
 .about .description{
-  width: 50%;
-  padding: 0 3rem;
+  width: 70%;
+  padding-right: 3rem;
 }
 .about .description h1, h2, p{
   color: var(--links_navbar);
@@ -44,12 +44,11 @@
 }
 .parent {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns:1fr;
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 5px;
   grid-row-gap: 5px;
   }
 
-  .div1 { grid-area: 1 / 1 / 3 / 2; }
-  .div2 { grid-area: 1 / 2 / 2 / 3; }
-  .div3 { grid-area: 2 / 2 / 3 / 3; }
+  .div2 { grid-area: 1 / 1 / 2 / 2; }
+  .div3 { grid-area: 2 / 1 / 3 / 2; }
