--- a/PersonalPortfolio/src/app/components/footer/footer.component.css
+++ b/PersonalPortfolio/src/app/components/footer/footer.component.css
@@ -1,15 +1,18 @@
-.bottom-line{
+footer{
   height: 90px;
   background: none;
   position: absolute;
+}
+.bottom-line{
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
 }
 .section_footer{
   width: 100%;
   height: 100%;
   position: relative;
+  padding: 0 3rem;
 }
 .section_footer::before{
   content: "";
