--- a/PersonalPortfolio/src/app/components/footer/footer.component.html
+++ b/PersonalPortfolio/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="bottom-line">
+<footer class="bottom-line">
   <div class="section_footer">
     <ul>
       <li><a href="mailto:joseandree.j42@gmail.com"  target="_blank"class="social_links"><i class="fa-solid fa-envelope"></i></a></li>
@@ -6,4 +6,4 @@
       <li><a href="https://github.com/PykeMG" target="_blank" class="social_links"><i class="fa-brands fa-github"></i></a></li>
     </ul>
   </div>
-</div>
+</footer>
