--- a/PersonalPortfolio/src/styles.css
+++ b/PersonalPortfolio/src/styles.css
@@ -14,6 +14,7 @@ body{
   background: rgb(21,104,158);
   background: linear-gradient(18deg, rgba(21,104,158,1) 0%, rgba(0,0,0,1) 100%);
   height: 100vh;
+  overflow: hidden;
 }
 .container{
   width: 100%;
@@ -23,4 +24,7 @@ body{
 }
 section{
   height: calc(100vh - 180px);
+}
+.main{
+  position: relative;
 }
