new thinks added!

--- a/PersonalPortfolio/src/app/components/education/education.component.html
+++ b/PersonalPortfolio/src/app/components/education/education.component.html
@@ -1,22 +1,22 @@
 <section>
   <div class="container about">
     <div class="description">
-      <h1>Education</h1>
+      <h2>Education</h2>
       <div class="block_education">
-        <h2>ARCHITECTURE OF
+        <h1>ARCHITECTURE OF
           TECHNOLOGY PLATFORMS AND SERVICES OF
-          INFORMATION</h2>
+          INFORMATION</h1>
           <p>ISIL | 2022</p>
       </div>
       <div class="block_education">
-        <h2>AS400 | genexus</h2>
-          <p>Software Enterprise Services | 2022</p>
+        <h1>English</h1>
+          <p> ICPNA | 2019</p>
       </div>
     </div>
     <div class="photo">
       <div class="parent">
-        <div class="div2"><img src="../../../assets/img/isil-carreras.jpg" alt=""> </div>
-        <div class="div3"><img src="../../../assets/img/web-developer.jpg" alt=""> </div>
+        <div class="div2"><img src="../../../assets/img/isil-carreras.jpg" alt="">
+        </div>
         </div>
     </div>
   </div>
