--- a/PersonalPortfolio/src/app/components/experience/experience.component.html
+++ b/PersonalPortfolio/src/app/components/experience/experience.component.html
@@ -1,1 +1,19 @@
-<p>experience works!</p>
+<section>
+  <div class="container about">
+    <div class="description">
+      <h1>Education</h1>
+      <div class="block_education">
+        <h2>ARCHITECTURE OF
+          TECHNOLOGY PLATFORMS AND SERVICES OF
+          INFORMATION</h2>
+          <p>ISIL | 2022</p>
+      </div>
+    </div>
+    <div class="photo">
+      <div class="parent">
+        <div class="div2"><img src="../../../assets/img/isil-carreras.jpg" alt=""> </div>
+        <div class="div3"><img src="../../../assets/img/web-developer.jpg" alt=""> </div>
+        </div>
+    </div>
+  </div>
+</section>
