--- a/PersonalPortfolio/src/app/components/education/education.component.css
+++ b/PersonalPortfolio/src/app/components/education/education.component.css
@@ -6,49 +6,43 @@
   justify-content: space-around;
 }
 .about .photo{
-  width: 30%;
+  width: 50%;
   overflow: hidden;
+  padding-left: 3rem;
 }
 .about .photo img{
   height: 100%;
   width: 100%;
   display: block;
-  filter: grayscale(1);
-  transition: .5s ease-in-out;
-  cursor: pointer;
-}
-.about .photo img:hover{
-  filter: grayscale(0);
 }
 .about .description{
-  width: 70%;
+  width: 50%;
   padding-right: 3rem;
 }
-.about .description h1, h2, p{
-  color: var(--links_navbar);
-}
 .about .description h1{
-  font-size: 4rem;
   text-transform: uppercase;
+  position: relative;
+  margin-left: 10px;
+}
+.about .description h1::before{
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -30px;
+  background-color: var(--links_navbar);
+  border-radius: 5px;
 }
 .about .description h2{
-  font-size: 2rem;
   text-transform: uppercase;
 }
 .about .description p{
   font-size: 1.5rem;
+  margin-left: 10px;
 }
 
 .about .description .block_education{
   margin: 2rem 0;
 }
-.parent {
-  display: grid;
-  grid-template-columns:1fr;
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
-  }
-
-  .div2 { grid-area: 1 / 1 / 2 / 2; }
-  .div3 { grid-area: 2 / 1 / 3 / 2; }
